--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^41.3.0"
+        "@ckeditor/ckeditor5-build-classic": "^41.3.0",
+        "primevue": "^3.51.0"
     }
 }
